--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
       <div class="field">
         <%= f.label :nickname %> <em>(6 characters maximum)</em><br />
-        <%= f.text_field :nickname, autofocus: true %> <!-- maxlength削除済みです -->
+        <%= f.text_field :nickname, autofocus: true %> <!-- maxlength削除済み！ -->
       </div>
 
       <div class="field">
